# blockybinary

./: .gitignore  CMakeLists.txt  LICENSE  blockybinary.kdev4
demos/blockyarchiver/: CMakeLists.txt  main.cpp
demos/blockyarchiver/include/noname24/: blockyarchiver.hpp
demos/blockyarchiver/src/noname24/: blockyarchiver.cpp
imhex/: blockybinarybin.hexpat  braw.hexpat
include/noname24/: blockybinary.hpp
include/noname24/blockybinary/: inthelper.hpp
src/noname24/: blockybinary.cpp
src/noname24/blockybinary/: Block.cpp  BlockSettings.cpp  Debug.cpp  blockybinary.cpp  inthelper.cpp
src/noname24/blockybinary/BlockSettings/: Deflate.cpp
src/noname24/blockybinary/BlockSettingsCustom/: CompressDeflate.cpp  Deflate.cpp  XXH3.cpp
src/noname24/blockybinary/BlockSettingsModules/CompressDecompress/: DeflateInflate.cpp
src/noname24/blockybinary/BlockSettingsModules/Security/: Magic.cpp  XXH3.cpp
tests/: main.cpp
